NuCivic/nuboot_radix healthdata#170 Revert demo block tint to colorizer option, fix search overlap on mobile

--- a/colorizer/colorizer.css
+++ b/colorizer/colorizer.css
@@ -15,6 +15,7 @@ body.overlay {
 h1,h2,h3,h4 {
   color: @text;
 }
+.pane-dkan-sitewide-demo-front-dkan-demo-front .pane-content,
 #featured .tint,
 .panel-top .tint {
   background-color: @top_rgb;
